istio/destinationrules/mariadb-dr.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: mariadb
  namespace: default
  labels:
    app: mariadb
    managed-by: istio
spec:
  host: mariadb
  subsets:
    - name: v1
      labels:
        version: v1
